--- a/divyanshfilm/templates/home.html
+++ b/divyanshfilm/templates/home.html
@@ -58,7 +58,7 @@
     </div>
 
     <div id="enter-overlay">
-        <a href="{{ url_for('film.films') }}"><b style="color: red;">ENTER</b></a>
+        <a href="{{ url_for('films') }}"><b style="color: red;">ENTER</b></a>
     </div>
 </body>
 </html>
