--- a/templates/home.html
+++ b/templates/home.html
@@ -47,12 +47,15 @@
         #enter-overlay a:hover {
             text-decoration: line-through; /* Add strikethrough effect on hover */
         }
+
+        
+
     </style>
 </head>
 <body>
     <div id="video-container">
         <video autoplay muted loop>
-            <source src="{{ url_for('static', filename='videos/website_edit.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='videos/home.mp4') }}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
