--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,8 @@
             flex-direction: column;
             align-items: left;
             justify-content: center;
-            height: 80vh;
+            margin-top: 100px;
+            /* height: 80vh; */
         }
 
         p {
@@ -24,13 +25,14 @@
 
         @media only screen and (max-width: 600px) {
             .about-container {
-                margin-top: 320px;
+                margin-top: 100px;
 
             }
 
             p {
                 margin-bottom: 30px;
-                padding-left: 100px;
+                padding-left: 30px;
+                padding-right: 30px;
                 align-items: left;
                 justify-content: left;
             }
@@ -48,6 +50,7 @@
         He’s directed several experimental & gritty short films. Currently working as a Production Coordinator at redchillies color</p>
     
         <p>His motto <b>‘Get busy living - or get busy dying’</b> - Ellis ‘Red’</p>
+        <p></p>
     </div>
 
 {% endblock %}
