imbad logo added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -181,6 +181,10 @@
             <a href="https://www.instagram.com/divyansh_461/" target="_blank">
                 <i class="fa fa-instagram" style="font-size:20px; color:white"></i>
             </a>
+            <a href="https://www.imdb.com/name/nm13812955/" target="_blank">
+                <i class="fa fa-imdb" style="font-size:20px; color:white"></i>
+            </a>
+            
         </div>
         
     </div>
