you tube logo remove from contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -70,15 +70,16 @@
                 <br>
                 <h4><u>-CONNECT US ON</u></h4>
                 <div class="social-icons">
-                    <a href="https://www.vimeo.com/example" target="_blank"> 
-                        <i class="fa fa-vimeo"></i> 
-                    </a>
                     <a href="https://www.instagram.com/divyansh_461/" target="_blank">
                         <i class="fa fa-instagram"></i>
                     </a>
-                    <a href="https://www.youtube.com/@divyanshsharma4923" target="_blank">
-                        <i class="fa fa-youtube"></i>
+                    <a href="https://www.vimeo.com/" target="_blank"> 
+                        <i class="fa fa-vimeo"></i> 
                     </a>
+                    <a href="https://www.imdb.com/name/nm13812955/" target="_blank">
+                        <i class="fa fa-imdb"></i>
+                    </a>
+                    
                 </div>
             </div>
         </div>
